# the_colony

./: Cargo.toml  WorldManager.cs  colony_colonists.csproj  colony_colonists.sln  icon.svg.import  node_2d.tscn  project.godot  the_colony.csproj  the_colony.sln  tile_map.tscn
Entities/: Food.cs  Pawn.cs
Systems/: HungerSystem.cs  MovementSystem.cs  TaskSystem.cs
assets/: tileset.png.import
assets/characters/: character.png.import
assets/fonts/: screen-diags-font.ttf.import
assets/food-ocal/: food-OCAL.png.import
assets/terrain/: ugly_flower.png.import  ugly_grass.png.import  ugly_grass2.png.import  ugly_grass3.png.import  ugly_grass4.png.import  ugly_mud.png.import  ugly_mud2.png.import  ugly_mud3.png.import  ugly_mud4.png.import
src/: character_plugin.rs  debug_plugin.rs  growth_plugin.rs  input_plugin.rs  main.rs  name_plugin.rs  pathing.rs  random_movement_plugin.rs  task_scorer.rs  tasks.rs  thirst_thinker.rs  wander_plugin.rs  world_gen_plugin.rs
