[package]
name = "the_colony"
version = "0.1.0"
edition = "2021"

# DYLD_LIBRARY_PATH=/Users/andrew/Development/the_colony/target/release:/Users/andrew/.rustup/toolchains/nightly-aarch64-apple-darwin/lib/rustlib/aarch64-apple-darwin/lib
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_asset_loader = "0.20.0"
rand = "0.8.5"
bevy_pancam = "0.11.1"
bevy-inspector-egui = "0.23.4"
bevy-debug-text-overlay = "8.1.0"
iyes_perf_ui = "0.2.3"
#big-brain = "0.18.0"
#bevy_mod_scripting = {git = "https://github.com/cyanblob/bevy_mod_scripting", features = ["bevy_mod_scripting_lua", "bevy_script_api", "lua", "luajit"]}
bevy_enum_filter = { git = "https://github.com/sardap/bevy_enum_filter" }
#bevy_ecs_tilemap = { version = "0.12.0", features = ["atlas"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", features = ["atlas"] }
#bevy_enum_filter = "0.3.0"

# for converting enums to strings
strum = "0.26"
strum_macros = "0.26"
